# minimal-rust-android-bevy

./: .gitignore  Cargo.toml  README.md  build.sh
